--- a/aws/PAS-AIO-template.yaml
+++ b/aws/PAS-AIO-template.yaml
@@ -21,12 +21,6 @@ Resources:
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: 'VaultMachine/VaultPostInstallLog'
-  VaultCfnInitLogStream:
-    Type: AWS::Logs::LogStream
-    Properties: 
-      LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: 'ComponentMachine/CfnInitLog'
-    DeletionPolicy: Retain
   CPMConfigurationsLog:
     Type: 'AWS::Logs::LogStream'
     Properties:
@@ -292,10 +286,10 @@ Resources:
       AWS::CloudFormation::Init:
         configSets:
           ascending:
-            - configSSMAndHostname
+            - configSSMAndServer
             - configServices
             - configSignal
-        configSSMAndHostname:
+        configSSMAndServer:
           files:
             C:\CyberArk\Deployment\KMSPolicy.json:
               content:
@@ -350,33 +344,6 @@ Resources:
       Roles:
         - !Ref 'VaultInstancesRole'
     Condition: EULACondition
-  RandomStringLambdaFunction:
-    Type: AWS::Lambda::Function
-    Properties:
-      Code:
-        ZipFile: |
-          const response = require("./cfn-response");
-          const randomString = (length, chars) => {
-              var result = '';
-              for (var i = length; i > 0; --i) result += chars[Math.floor(Math.random() * chars.length)];
-              return result;
-          }
-          exports.handler = (event, context) =>{
-
-            const str = randomString(1, 'ABCDEFGHIJKLMNOPQRSTUVWXYZ') + randomString(1, 'abcdefghijklmnopqrstuvwxyz') + randomString(3, '0123456789') + randomString(11, 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ');
-            const responseData = {RandomString: str};
-            response.send(event, context, response.SUCCESS, responseData);
-
-          };
-      Handler: index.handler
-      Runtime: nodejs10.x
-      Role: !GetAtt 'LambdaLogDenyRole.Arn'
-      MemorySize: 128
-      Timeout: 20
-  ComponentSecretString:
-    Type: AWS::CloudFormation::CustomResource
-    Properties:
-      ServiceToken: !GetAtt 'RandomStringLambdaFunction.Arn'
   ComponentInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -566,12 +533,12 @@ Resources:
       AWS::CloudFormation::Init:
         configSets:
           ascending:
-            - configSSMAndHostname
+            - configSSMAndServer
             - configPVWA
             - configCPM
             - configPSM
             - configSignal
-        configSSMAndHostname:
+        configSSMAndServer:
           services:
             windows:
               AmazonSSMAgent:
@@ -681,11 +648,11 @@ Resources:
               waitAfterCompletion: '0'
         configSignal:  
           commands:
-            98-SignalCompletion:
-              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource ComponentsMachine --region ${AWS::Region}'
-            99-restart:
+            98-restart:
               command: powershell.exe -Command "Restart-Computer -Force"
               waitAfterCompletion: forever  
+            99-SignalCompletion:
+              command: !Sub 'cfn-signal.exe -e %ERRORLEVEL% --stack ${AWS::StackId} --resource ComponentsMachine --region ${AWS::Region}'
     CreationPolicy:
       ResourceSignal:
         Timeout: PT20M
