--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1026,8 +1026,7 @@ Parameters:
     Description: Enter a password for the Vault Master user.
     NoEcho: true
     MinLength: 8
-    AllowedPattern: >-
-      ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
+    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
     ConstraintDescription: >-
       Vault Master password must contain at least 1 lowercase letter, 1
       uppercase letter, 1 digit and 1 special character
@@ -1041,8 +1040,7 @@ Parameters:
     Description: Enter a password for the Vault Administrator user.
     NoEcho: true
     MinLength: 8
-    AllowedPattern: >-
-      ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
+    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
     ConstraintDescription: >-
       Vault Administrator password must contain at least 1 lowercase letter, 1
       uppercase letter, 1 digit and 1 special character
@@ -1056,8 +1054,7 @@ Parameters:
     Description: Enter a password for the Vault DR user.
     NoEcho: true
     MinLength: 8
-    AllowedPattern: >-
-      ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
+    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
     ConstraintDescription: >-
       Vault DR password must contain at least 1 lowercase letter, 1 uppercase
       letter, 1 digit and 1 special character
